# ifai

./: .gitignore  BUG_FIX_REPORT.md  CHANGELOG.md  README.md  README_EN.md  RELEASE-v0.2.2.md  RELEASE-v0.2.3.md  RELEASE-v0.2.4.md  RELEASE-v0.2.5.md  RELEASE-v0.2.6.md  RELEASE-v0.2.7.md  RELEASE.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  ROADMAP_VISUAL.md  ROADMAP_v0.2.0.md  TASK_BREAKDOWN_v0.2.0.md  TOUTIAO_v0.2.5.md  package-lock.json  package.json  playwright.config.ts  test-commercial-commandbar.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: release.yml  windows-test-build.yml  windows-test.yml
docs/: LLM_INFERENCE_TESTING.md  LLM_INFERENCE_USAGE.md  RAG-Symbol-Aware-Implementation.md  RELEASE-v0.2.1.md  RELEASE-v0.2.2.md  RELEASE-v0.2.3.md  RELEASE-v0.2.6.md  RELEASE-v0.2.7.md  RELEASE-v0.2.8.md  RELEASE-v0.2.9.md  RELEASE-v0.3.0.md  RELEASE-v0.3.1.md  RELEASE-v0.3.2.md  RELEASE-v0.3.3.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.0_EN.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.5.md  v0.3.0_dep001_dep003_test_summary.md  v0.3.0_impact_analysis_testing_guide.md  v0.3.0_multimodal_implementation_summary.md  vite-wrong-directory-analysis.md
docs/proposals/: explore-agent-refactor.md  v0.2.8_plan.md  v0.2.9_plan.md  v0.3.0_plan.md
docs/testing/: composer-manual-test-guide.md  integration_test_plan.md  local_model_routing_verification.md
playwright-report/: index.html
scripts/: composer-debug-test.js  composer-quick-fix.js  m1-acceptance.sh  run_automated_tests.sh  test-composer-integration.js  test-error-fix-ui.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_inference.rs
src-tauri/src/: agent.rs  ai.rs  ai_utils.rs  ai_utils.rs.bak  commercial.rs  core_traits.rs  file_cache.rs  file_walker.rs  git.rs  intelligence_router.rs  lib.rs  local_model.rs  main.rs  multimodal.rs  project_config.rs  rag.rs  symbol_engine.rs  test_project_config.rs  token_counter.rs  v0_3_0_domain_tests.rs
src-tauri/src/agent_system/: base.rs  mod.rs  runner.rs  supervisor.rs  tools.rs
src-tauri/src/commands/: agent_commands.rs  atomic_commands.rs  bash_commands.rs  bash_streaming.rs  core_wrappers.rs  error_commands.rs  mod.rs  prompt_commands.rs  proposal_commands.rs  symbol_commands.rs  task_commands.rs
src-tauri/src/community/: mod.rs
src-tauri/src/conversation/: mod.rs  summarizer.rs  token_counter.rs
src-tauri/src/llm_inference/: config.rs  generator.rs  mod.rs  model.rs
src-tauri/src/openspec/: detector.rs  mod.rs
src-tauri/src/prompt_manager/: mod.rs  storage.rs
src-tauri/src/tool_classification/: layer1_exact_match.rs  layer2_rule_based.rs  layer3_llm.rs  mock.rs  mod.rs  tests.rs  types.rs
src/config/: edition.ts
src/core/: mock-core.ts
src/hooks/: useLsp.ts  useSyntaxHighlightWorker.ts  useThrottle.ts
src/i18n/: config.ts
src/services/: atomicWriteService.ts  codeAnalysis.ts  errorCodeMapper.ts  errorFixService.ts  errorInterceptor.ts  multimodalService.ts  refactoring.ts  taskBreakdownService.ts  taskExecutionService.ts  toolClassificationService.ts
src/stores/: agentStore.ts  chatStore.ts  chatUIStore.ts  codeReviewStore.ts  codeSmellStore.ts  debugStore.ts  dragDropStore.ts  editorStore.ts  exploreStore.ts  fileStore.ts  helpStore.ts  inlineEditStore.ts  layoutStore.ts  projectConfigStore.ts  promptStore.ts  proposalStore.ts  refactoringStore.ts  settingsStore.ts  shortcutStore.ts  snippetStore.ts  taskBreakdownStore.ts  taskStore.ts  threadStore.ts  toolClassificationStore.ts  types.ts  useChatStore.ts  workspaceConfig.ts
src/tauri-mocks/: plugin-dialog.ts  plugin-os.ts  plugin-shell.ts
src/types/: agent.ts  chat.ts  multimodal.ts  proposal.ts  snippet.ts  taskBreakdown.ts  tool.ts  toolClassification.ts  toolRegistry.ts  toolTypes.ts
src/utils/: cache.ts  databaseManager.ts  fileActions.ts  fileSystem.ts  imageCompression.ts  intentRecognizer.ts  languageDetection.ts  monacoLanguages.ts  openspecValidator.ts  performanceMonitor.ts  proposalMarkdownParser.ts  sync.ts  taskParser.ts  testDataGenerator.ts  tokenCounter.ts  toolCallParser.ts  toolResultFormatter.tsx  workspaceConfig.ts
src/workers/: syntaxHighlight.worker.ts
test-results/: .last-run.json
tests/: README.md  debug_zhipu_arguments.cjs  download_server.py  reproduce_issue.cjs  smoke.test.ts  spec_agent_flow.cjs  spec_agent_store_race.cjs  spec_escape_fix.cjs  spec_openfile_update.cjs  spec_tool_history.cjs  test_download.sh  test_full_flow.cjs  test_local_fim.sh  test_local_routing.sh
tests/components/: toolArgsUI.test.tsx
tests/download/: e2e_test.sh  mock_server.py
tests/e2e/: .env.e2e.backup  .env.e2e.example  CODING_STANDARDS.md  README.md  REAL_AI_TESTING.md  agent-consecutive-task.spec.ts  agent_tools_regression.spec.ts  ai-chat-reply.spec.ts  all-tools-result.spec.ts  bash-agent-loop-prevention.spec.ts  bash-agent.spec.ts  bash-tool-perf.spec.ts  bash-tool-result.spec.ts  bash-tool.spec.ts  button-state-update.spec.ts  changelog-line-diff.spec.ts  chat-flicker-repro.spec.ts  chat-header-modernization.spec.ts  chat-history-flicker.spec.ts  chat-ui-optimizations.spec.ts  code-rollback-final.spec.ts  commercial-version-stream.spec.ts  composer-accept-reject-cycle.spec.ts  composer-conflict-detection.spec.ts  composer-real-ai.spec.ts  composer-real-filesystem.spec.ts  composer.spec.ts  console-display-verification.spec.ts  debug-rollback-ui.spec.ts  demo-agent-debug.spec.ts  demo-guide.spec.ts  diff-summary-accuracy.spec.ts  editor-functionality-regression.spec.ts  file-multi-selection.spec.ts  file-read-result.spec.ts  global-setup.ts  global-teardown.ts  llm-tool-loop.spec.ts  long-running-command.spec.ts  message-order-after-generation.spec.ts  (+31 more)
tests/integration/: ChatFlow.test.tsx  ChatLoadingState.test.tsx  SnippetWorkflow.test.tsx  TaskCommandSync.test.ts  TaskSystem.test.ts  TokenCounting.test.tsx  useChatStoreRepro.test.ts
(+414 files in other folders)
